@@ -64,6 +64,73 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+	<groupId>com.akathist.maven.plugins.launch4j</groupId>
+	<artifactId>launch4j-maven-plugin</artifactId>
+	<version>1.7.25</version>
+	<executions>
+		<execution>
+			<id>l4j-clui</id>
+			<phase>package</phase>
+			<goals><goal>launch4j</goal></goals>
+			<configuration>
+				<headerType>console</headerType>
+				<outfile>target/casoventas2.exe</outfile>
+				<jar>target/CasoVentas2-1.0-SNAPSHOT.jar</jar>
+				<errTitle>encc</errTitle>
+				<classPath>
+					<mainClass>pe.edu.utp.App</mainClass>
+					<addDependencies>true</addDependencies>
+					<preCp>anything</preCp>
+				</classPath>
+				<jre>
+					<minVersion>1.8</minVersion>
+					<opts>
+						<opt>-Djava.endorsed.dirs=./endorsed</opt>
+					</opts>
+				</jre>
+				<versionInfo>
+					<fileVersion>${launch4jVersion}</fileVersion>
+					<txtFileVersion>${launch4jVersion}</txtFileVersion>
+					<fileDescription>${project.name}</fileDescription>
+					<copyright>MIT</copyright>
+					<productVersion>${launch4jVersion}</productVersion>
+					<txtProductVersion>${launch4jVersion}</txtProductVersion>
+					<productName>${project.name}</productName>
+					<originalFilename>${exeFileName}.exe</originalFilename>
+					<!-- internalName is mandatory -->
+					<internalName>${exeFileName}</internalName>
+				</versionInfo>
+			</configuration>
+		</execution>
+	</executions>
+    </plugin>
+    <!-- Just copy the file in the local bin -->
+    <plugin>
+	<artifactId>maven-resources-plugin</artifactId>
+            <version>3.0.0</version>
+            <executions>
+		<execution>
+			<id>deploy-to-local-directory</id>
+			<phase>install</phase>
+			<goals>
+				<goal>copy-resources</goal>
+			</goals>
+			<configuration>
+				<outputDirectory>${bin.local.path}</outputDirectory>
+				<resources>
+					<resource>
+						<directory>${project.build.directory}</directory>
+						<includes>
+							<include>*.exe</include>
+						</includes>
+						<filtering>false</filtering>
+					</resource>
+				</resources>
+			</configuration>
+		</execution>
+            </executions>
+        </plugin>
     </plugins>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
